Fix chrome backface visibility bug.

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -20,6 +20,7 @@
 .card-side {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    transform-style: preserve-3d;
     position: absolute;
     top: 0;
     left: 0;
